private and public endpoints and error return in JSON format
